--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,4 +1,4 @@
-<h1>All Games in library</h1>
-<ul class="games">
+<h1 class="games-header">Wszystkie gry</h1>
+<div class="games">
     <%= render partial: "game", collection: @games %>
-</ul>
+</div>
