--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -1,4 +1,10 @@
 <h4><%= @game.name %></h4>
 <p><%= @game.description %> </p>
 <p><%= @game.min_player_count %> - <%= @game.max_player_count %> graczy </p>
+<p>Rok wydania: <%= @game.publication_year %> </p>
+<p>Kaucja: <%= @game.deposit %></p>
+<p>Cena za dzień wypożyczenia: <%= @game.rental_price %></p>
+ <%= image_tag @game.picture, size: '360x360' %>
+ <%= link_to 'Edytuj', edit_game_path(@game.id) %>
+
 
