--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -6,9 +6,16 @@
         <li class="nav-item">
             <%=link_to "Wszystkie gry", games_path(), :class => 'nav-link' %>
         </li>
-        <li class="nav-item">
-            <%=link_to "Dodaj grę", new_game_path(), :class => 'nav-link' %>
-        </li>
+        <% if can? :create, Game  %>
+            <li class="nav-item">
+                <%=link_to "Dodaj grę", new_game_path(), :class => 'nav-link' %>
+            </li>
+        <% end %>
+        <% if can? :rent, Game %>
+            <li class="nav-item">
+                Wypożycz grę
+            </li>
+        <% end %>
         <% if current_user %>
             <li class="nav-item"><%= current_user.username %></li>
             <li class="nav-item">
