--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -6,5 +6,8 @@
 <p>Cena za dzień wypożyczenia: <%= @game.rental_price %></p>
  <%= image_tag @game.picture, size: '360x360' %>
  <%= link_to 'Edytuj', edit_game_path(@game.id) %>
+ <if can? :book, Game %>
+    <%= link_to 'Zarezerwuj', book_game_path(@game.id) %>
+<% end %>
 
 
