--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,14 @@
     <%= f.text_field :email %>
   </div>
   <div class="field">
+    <%= f.label :first_name %><br />
+    <%= f.text_field :first_name %>
+  </div>
+  <div class="field">
+    <%= f.label :last_name %><br />
+    <%= f.text_field :last_name %>
+  </div>
+  <div class="field">
     <%= f.label :password %><br />
     <%= f.password_field :password %>
   </div>
