--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,6 +1,6 @@
-<%= form_tag games_path, :method => 'get' do %>
-    Tytuł gry <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag 'Wyszukaj', name: nil %>
+<%= form_tag games_path, :method => 'get', :class => 'search-form' do %>
+    Znajdź grę <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag 'Wyszukaj', name: nil, :class => 'btn btn-primary' %>
 <% end %>
 <% if params[:search] %>
     <h1 class="games-header">Wyniki wyszukiwania "<%= params[:search] %>" </h1>
@@ -13,11 +13,11 @@
 <div>
         <ul class="pager">
             <li class="previous">
-                <%= link_to_if @page > 0, "<< Previous", games_path(page: @page - 1) %>
+                <%= link_to_if @page > 0, "<< Poprzednia", games_path(page: @page - 1) %>
             </li>
 
             <li class="next">
-                <%= link_to_if show_next_page?, "Next >>", games_path(page: @page + 1) %>
+                <%= link_to_if show_next_page?, "Następna >>", games_path(page: @page + 1) %>
             </li>
         </ul>
     </div>
